basic dynamic zones

--- a/backend/api/article/models/article.settings.json
+++ b/backend/api/article/models/article.settings.json
@@ -20,10 +20,6 @@
       "type": "text",
       "required": true
     },
-    "content": {
-      "type": "richtext",
-      "required": true
-    },
     "slug": {
       "type": "uid",
       "targetField": "title",
@@ -48,6 +44,14 @@
     "author": {
       "via": "articles",
       "model": "writer"
+    },
+    "dynamicZone": {
+      "type": "dynamiczone",
+      "components": [
+        "shared.buttons",
+        "blocks.hero",
+        "blocks.image-paragraph"
+      ]
     }
   }
 }
