--- a/backend/api/homepage/models/homepage.settings.json
+++ b/backend/api/homepage/models/homepage.settings.json
@@ -2,11 +2,13 @@
   "kind": "singleType",
   "collectionName": "homepages",
   "info": {
-    "name": "Homepage"
+    "name": "Homepage",
+    "description": ""
   },
   "options": {
     "increments": true,
-    "timestamps": true
+    "timestamps": true,
+    "draftAndPublish": false
   },
   "attributes": {
     "seo": {
@@ -14,11 +16,11 @@
       "repeatable": false,
       "component": "shared.seo"
     },
-    "hero": {
-      "type": "component",
-      "repeatable": false,
-      "component": "sections.hero",
-      "required": true
+    "dynamicZone": {
+      "type": "dynamiczone",
+      "components": [
+        "blocks.hero"
+      ]
     }
   }
 }
