--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-source-filesystem": "3.3.0",
+    "gatsby-source-graphql": "^4.19.0",
     "gatsby-source-strapi": "^1.0.1",
     "gatsby-transformer-sharp": "^3.3.0",
     "moment": "^2.26.0",
